# Cost-Consumption-Analysis

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md  شرح_التطبيق.txt
.agents/: agent_assets_metadata.toml
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/routes/: boq.ts  boqStandardData.ts  index.ts  materials.ts
artifacts/boq-analytics/: capacitor.config.ts  index.html  package.json
artifacts/boq-analytics/.replit-artifact/: artifact.toml
artifacts/boq-analytics/android/app/: build.gradle
artifacts/boq-analytics/src/: App.tsx  index.css
artifacts/boq-analytics/src/components/: Layout.tsx
artifacts/boq-analytics/src/lib/: analyticsEngine.ts  api.ts  db.ts  standardData.ts
artifacts/boq-analytics/src/pages/: Adaptive.tsx  Analysis.tsx  CustodyTimeline.tsx  (+22 more)
artifacts/boq-dashboard/: index.html  package.json  vite.config.ts
artifacts/boq-dashboard/.replit-artifact/: artifact.toml
artifacts/boq-dashboard/src/: index.css
attached_assets/: prompt4_1779059310610.txt  prompt4_1779059948480.txt  prompt4_1779115472450.txt  prompt4_1779117380583.txt  prompt4_1779122776308.txt  prompt4_1779127828654.txt  prompt4_1779129756693.txt  الهندهولات_والاخلاء_1779041552449.HTM  كميات_واسعار_البنود_المعتمد_1779059333325.html  هندهولات4_1779041552498.HTM  هندهولات_2_1779041552470.HTM  هندهولات_2_1779060872288.xlsx  هندهولات_3_1779041552488.HTM
lib/api-spec/: openapi.yaml
outputs/boq_analysis/: analysis_results.csv  boq_analysis.xlsx  dashboard_data.json  master_dataset.csv
scripts/src/: analyze_boq.py
(+6 files in other folders)
