[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "kaleido>=1.3.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
]
